data/collection/fixes/descriptions/java/JDK-8062740
Since

    changeset:   2686:56f8be952a5c
    user:        jjg
    date:        Wed Oct 29 17:25:23 2014 -0700
    summary:     8062348: langtools tests should close file manager (group 1)

compilation of test/tools/sjavac/DependencyCollection.java fails with

/localhome/hgsrc/dev/langtools/test/tools/sjavac/DependencyCollection.java:62: error: unreported exception IOException; must be caught or declared to be thrown
        try (StandardJavaFileManager fileManager = javac.getStandardFileManager(null, null, null)) {
                                     ^
  exception thrown from implicit call to close() on resource variable 'fileManager'
1 error


Presumably this was overlooked since compilation of this file is skipped if sjavac is not on class path.